2011-03-03  Vivien Nicolas  <21@vingtetun.org>
 * Makefile.am: Add a install-dev rule for simplify the dev-install-reboot
 process actually in use. I could possibly play with compzilla/Makefile.am
 in order to achieve that but I've not found the right way to do it yet.

 * compzilla/Makefile.am: Let 'meebo' lives into a distinct directory, if later
 people want to override inside the chrome.manifest and find 'meebo' is too
 specific nothing prevent to rename the directory.

 * compzilla/chrome.manifest: Add a simple comment about interfaces and the
 binary component

 * compzilla/chrome/skin/compzilla.css: Reformat the file and udpate the path
 to match the new 'meebo' subdir for images


2011-02-03  Vivien Nicolas  <21@vingtetun.org>
 * compzilla/chrome/content/debug.js: Removed the event listener

 * compzilla/chrome/content/overlay.js: Removed the event listener

 * compzilla/chrome/content/start.xul: Add the 'event' attribute to <key/> and
 make it default to 'keydown' to listen key events before the window

 * compzilla/src/compzillaWindow.cpp: Move the key handler code in ::KeyDown to
 ::KeyPress, this way the key has time to be handle by the xul <commands/>

 * compzilla/src/compzillaWindow.h: Add a new private variable called mKeycode,
 used to save the keycode of the key during keydown and restore it during
 keypress. I'm not really sure why it works like that. Shoot first, think after

2011-26-02  Vivien Nicolas  <21@vingtetun.org>
 * compzilla/src/compzillaWindow.cpp: Spaces/Indent clean up

 * compzilla/src/compzillaRenderingContext.cpp: Spaces/Indent clean up
 Also I've tweaked ::Redraw with a comment and by not scaling with
 app units, which makes Redraw works!

2011-24-02  Vivien Nicolas  <21@vingtetun.org>

 * compzilla/Makefile.am: Include Compzilla.js instead of start.js

 * compzilla/chrome/content/Compzilla.js: This is the new name of start.js and
 the code has been quickly turns to an object to look more 2011.
